--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -26,7 +26,7 @@
 	padding: (.25 * $masthead-height) 0; // fourth the height to center vertically
 	height: $masthead-height;
 	text-decoration: none;
-	color: $black;
+	color: $white;
 	font-family: $alt-font;
 	font-weight: 700;
 	@include font-size(20,no);
@@ -71,7 +71,7 @@
 			}
 			&:after {
 				width: 0;
-				background: $black;
+				background: $white;
 			}
 			&:active:after,
 			&:hover:after {
@@ -105,7 +105,7 @@
 			font-weight: 700;
 			@include font-size(16,no);
 			line-height: .5 * $masthead-height; // half the height to center vertically
-			color: $black;
+			color: $white;
 			text-transform: uppercase;
 		}
 	}
@@ -117,7 +117,8 @@
 	@include clearfix;
 	font-weight: 700;
 	a {
-		color: lighten($black,60);
+		color: darken($white,60);
+		// color: lighten($black,60);
 	}
 }
 
@@ -239,11 +240,14 @@
 }
 .page-lead-content {
 	padding: 1em;
+	min-height: 300px;
 	@include media($medium) {
 		padding: 2em;
+		// min-height: 300px;
 	}
 	@include media($large) {
 		padding: 3em;
+		// min-height: 300px;
 	}
 	h1 {
 		@include font-size(48);
