--- a/css/main.scss
+++ b/css/main.scss
@@ -38,6 +38,7 @@ sitemap: false
 @import "buttons";
 @import "badges";
 @import "bullets";
+@import "list";
 @import "sliding-menu";
 @import "menu-navicons"; /* animated 3 line menu icon */
 @import "notices";
