#2 modif config url et target blank

--- a/_layouts/commission.html
+++ b/_layouts/commission.html
@@ -30,7 +30,7 @@ layout: default
       </div>
     </div>
     {% endif %} -->
-    <a class="btn btn-primary" href="{{ commission.coordination_link }}" title="Contacter ou participer à la commission {{commission.title}}">Contacter ou participer à la commission {{commission.title}}</a>
+    <a class="btn btn-primary" target="_blank" href="{{ commission.coordination_link }}" title="Contacter ou participer à la commission {{commission.title}}">Contacter ou participer à la commission {{commission.title}}</a>
     <!-- <hr> -->
     <div class="archive-wrap">
       <div class="page-content">
