--- a/_sass/_tiles.scss
+++ b/_sass/_tiles.scss
@@ -17,6 +17,14 @@
   &.tile-home {
     // @include span-columns(4);
     text-align: center;
+    p {
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+    .btn-block {
+      margin-top: 1.5rem;
+      margin-bottom: 0;
+    }
   }
   .entry-date {
     @include font-size(16,no);
