--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -29,6 +29,7 @@ $body-color                   : #ebebeb;
 $body-bg-color                : $nde-blue;
 
 $text-color                   : #fff;
+$text-color-dark              : #141414;
 $caption-color                : mix($white, $text-color, 25%);
 
 $base-color                  	: #343434;
