--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<footer role="contentinfo" id="site-footer">
-	<nav role="navigation" class="menu bottom-menu">
+<footer role="contentinfo" id="site-footer" >
+<!-- 	<nav role="navigation" class="menu bottom-menu">
 		<ul class="menu-item">
 		{% for link in site.data.footer %}
       {% if link.url contains 'http' %}
@@ -11,5 +11,34 @@
 		{% endfor %}
 		</ul>
 	</nav><!-- /.bottom-menu -->
-	<p class="copyright">&#169; {{ site.time | date: '%Y' }} <a href="{{ site.url }}">{{ site.title }}</a> powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> + <a href="http://mmistakes.github.io/skinny-bones-jekyll/" rel="nofollow">Skinny Bones</a>.</p>
+
+    <hr>
+  <div class="wrap">
+<!--   <div class="col-12">
+    </div> -->
+    <div class='col-2'>
+    	<p class="copyright">&#169; {{ site.time | date: '%Y' }} <a href="{{ site.url }}">{{ site.title }}</a> powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> + <a href="http://mmistakes.github.io/skinny-bones-jekyll/" rel="nofollow">Skinny Bones</a>.</p>
+      <div ></div>
+      <p class="copyright">
+        <i class="fa fa-github-square" aria-hidden="true"></i>
+        Contribuer sur
+        <a href="https://github.com/clairezed/nuit-debout-epinal" target="_blank"> github </a>
+      </p>
+    </div>
+
+    <div class='col-2'>
+      <nav role="navigation" class="">
+      <ul class="">
+        {% for link in site.data.footer %}
+          {% if link.url contains 'http' %}
+            {% assign domain = '' %}
+            {% else %}
+            {% assign domain = site.url %}
+          {% endif %}
+          <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank"{% endif %}>{{ link.title }}</a></li>
+        {% endfor %}
+      </ul>
+      </nav>
+    </div>
+  </div>
 </footer>
