--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -57,17 +57,18 @@ ins {
 /* Links */
 
 a {
-	color: $link-color;
-	&:hover {
-		color: darken($link-color, 20);
-	}
-	&:focus {
-		@extend %tab-focus;
-	}
-	&:hover,
-	&:active {
-		outline: 0;
-	}
+  @include hover-darken($link-color);
+	// color: $link-color;
+	// &:hover {
+	// 	color: darken($link-color, 20);
+	// }
+	// &:focus {
+	// 	@extend %tab-focus;
+	// }
+	// &:hover,
+	// &:active {
+	// 	outline: 0;
+	// }
 }
 
 /* Quoted text */
@@ -247,8 +248,8 @@ tr, td, th {
 hr {
 	display: block;
 	position: relative;
-	margin: 0px + (2 * $doc-line-height) 0;
-	margin: 0rem + ((2 * $doc-line-height) / $doc-font-size) 0;
+	margin: 0px + (1 * $doc-line-height) 0;
+	margin: 0rem + ((1 * $doc-line-height) / $doc-font-size) 0;
 	padding: 0;
 	height: 5px;
 	border: 0;
