--- a/css/main.scss
+++ b/css/main.scss
@@ -44,6 +44,7 @@ sitemap: false
 @import "notices";
 @import "animations";
 @import "tiles";
+@import "posts";
 @import "footnotes";
 @import "toc"; /* table of contents */
 @import "breadcrumbs";
