--- a/_layouts/commission.html
+++ b/_layouts/commission.html
@@ -19,7 +19,8 @@ layout: default
       </figure>
     {% endif %}
     {% if commission.description %}
-      <p>{{ commission.description }}</p>
+    <blockquote><p>{{ commission.description }}</p></blockquote>
+
     {% endif %}
 
 <!--     {% if commission.image.teaser %}
@@ -37,5 +38,18 @@ layout: default
         {{ content }}
       </div>
     </div class="archive-wrap">
+
+
+      <section>
+    <div class="tiles wrap">
+      {% for post in site.categories[page.symbol] %}
+        <div class="tile post-style col-3">
+          {% include post-tile.html %}
+        </div>
+
+        {% endfor %}
+    </div>
+  </section>
+
   </div>
 </div>
