--- a/_sass/_tiles.scss
+++ b/_sass/_tiles.scss
@@ -93,13 +93,6 @@
 .tile{
   &.agenda-style {
     padding: 15px;
-    @include outer-container;
-    margin-bottom: $gutter;
-    text-align: center;
-    p {
-      margin-top: 10px;
-      margin-bottom: 10px;
-    }
     @include media($micro) {
       @include fill-parent;
     }
@@ -114,11 +107,15 @@
       line-height: 1.1;
       @include font-size(16,no);
     }
+    .tile-theme {
+      margin-bottom: 0;
+    }
     .tile-theme-name {
       text-transform: uppercase;
       font-weight: bold;
     }
     .btn-secondary {
+      margin-top: 8px;
       background-color: $nde-blue;
     }
   }
