--- a/css/main.scss
+++ b/css/main.scss
@@ -45,6 +45,7 @@ sitemap: false
 @import "animations";
 @import "tiles";
 @import "posts";
+@import "faqs";
 @import "footnotes";
 @import "toc"; /* table of contents */
 @import "breadcrumbs";
